--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
   "name": "skiphog/multiexception",
   "description": "MultiExcepton library",
-  "keywords": ["multiexception", "exception"],
+  "keywords": [
+    "multiexception",
+    "exception"
+  ],
   "license": "MIT",
   "authors": [
     {
@@ -9,9 +12,11 @@
       "email": "skiphog@mail.ru"
     }
   ],
-  "minimum-stability": "dev",
   "require": {
     "php": ">=7.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "6.3"
   },
   "autoload": {
     "psr-4": {
